--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{"homepage": "https://vaibhav2536.github.io/Doctalk_Main_Frontend",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
